[project]
name = "ziviconnect-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "meilisearch>=0.34.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbstripout>=0.8.1",
    "ruff>=0.11.13",
]
